syntax = "proto3";

import "User/Furniture/UserFurnitureCustomData.proto";
import "Room/RoomPositionData.proto";

message UpdateRoomFurnitureData {
    string id = 1;

    optional UserFurnitureCustomData data = 2;

    optional RoomPositionData position = 3;
    optional uint32 direction = 4;

    optional uint32 color = 5;
}
