syntax = "proto3";

import "Room/RoomPositionData.proto";

message SendRoomUserWalkData {
    RoomPositionData target = 1;
}
