syntax = "proto3";

message UserFurnitureTonerData {
    bool enabled = 1;
    string color = 2;
}
